--- a/public/index.html
+++ b/public/index.html
@@ -25,12 +25,14 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
 
+
   <script src="assets/js/vendor.bundle.base.js"></script>
   <script src="assets/js/vendor.bundle.addons.js"></script>
   <script src="assets/js/off-canvas.js"></script>
   <script src="assets/js/hoverable-collapse.js"></script>
   <script src="assets/js/template.js"></script>
   <script src="assets/js/settings.js"></script>
+  <script src="assets/js/todolist.js"></script>
   <script src="assets/js/dashboard.js"></script>
   </body>
 </html>
